Ensure banner covers full space

--- a/src/components/User/index.css
+++ b/src/components/User/index.css
@@ -8,6 +8,7 @@
   width: 100%;
   background-color: var(--sidebar-active);
   background-position: center;
+  background-size: cover;
 }
 
 .ProfilePicContainer{
